--- a/pom.xml
+++ b/pom.xml
@@ -25,5 +25,17 @@
           <artifactId>lombok</artifactId>
           <version>1.16.22</version>
       </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-jdbc</artifactId>
+          <version>5.0.8.RELEASE</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-context</artifactId>
+          <version>5.0.8.RELEASE</version>
+      </dependency>
   </dependencies>
+
 </project>
